<resources>
    <string name="app_name">EnglishWordsApp</string>
    <string name="button_skip">Skip</string>
    <string name="button_continue">Continue</string>
    <string name="title_correct">Correct!</string>
    <string name="title_wrong">Wrong!</string>
    <string name="description_correct_answer">Correct answer</string>
    <string name="description_close_image_button">Close image button</string>
</resources>